@@ -8,6 +8,7 @@ Date: 00. 00. 0000
   Bugfixes:
     - Fixed that specifying amounts on top level ingredients was disabled when the matrix solver was enabled
     - Fixed that the tutorial mode toggle was always re-activated during migration
+    - Fixed that repairing a machine with invalid fuel would not work properly
     - Fixed that a couple of strings could not be localised
 
 ---------------------------------------------------------------------------------------------------
